# wiui

./: .gitignore  Makefile.am  configure.ac
include/: dialog.h  wiui.h
plugins/: Makefile.am  respeaker.c  wiui.c
src/: Makefile.am  checklist.c  inputbox.c  main.c  menubox.c  textbox.c  util.c  wictl.c  yesno.c
